# amio

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: event.rs  event_loop.rs  lib.rs  notify.rs  poll.rs  slab.rs  timer.rs
src/net/: tcp.rs  udp.rs  unix.rs
src/sys/: mod.rs
src/sys/unix/: awakener.rs  epoll.rs  kqueue.rs  mod.rs  net.rs  socket.rs  tcp.rs  udp.rs  uds.rs
src/util/: mpmc_bounded_queue.rs
test/: benchmark.rs  smoke.rs  tcp.rs  test.rs  test_battery.rs  test_close_on_drop.rs  test_echo_server.rs  test_multicast.rs  test_notify.rs  test_register_deregister.rs  test_register_multiple_event_loops.rs  test_tcp_level.rs  test_tick.rs  test_timer.rs  test_udp_level.rs  test_udp_socket.rs  test_unix_echo_server.rs  test_unix_pass_fd.rs
