[package]
name          = "amio"
version       = "0.1.0"
edition       = "2015"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Lightweight non-blocking IO"
readme        = "README.md"
exclude       = [
  ".gitignore",
  "test/**/*",
]

[dependencies]
log    = "*"
nix    = "0.18"
libc   = "*"
bytes  = "0.3.0"
net2   = { version = "*", default-features = false }

[dev-dependencies]
env_logger = "*"
tempdir    = "*"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "tcp"
path = "test/tcp.rs"

[[test]]
name = "smoke"
path = "test/smoke.rs"
